# MTGO_Tools

./: .gitignore  AGENTS.md  ARCHITECTURE.md  ATTRIBUTIONS.md  CLAUDE.md  LICENSE  LOC_REPORT.md  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: VALIDATION_QUICKSTART.md
automation/: README.md  __init__.py  __main__.py  capture_panel_transition.py  cli.py  client.py  e2e_tests.py  run_app_from_wsl.sh  server.py  test_runner.py
controllers/: __init__.py  app_bootstrap.py  app_controller.py  app_controller_helpers.py  app_controller_ui.py  bulk_data_coordinator.py  bulk_data_helpers.py  mtgo_background_helpers.py  mtgo_background_orchestrator.py  session_manager.py
docs/: ARCHITECTURE_REFACTORING.md  CHANGES.md  HANDOFF_792.md  REFACTOR_APP_FRAME.md  database_usage_report.md  i18n-localization-plan.md  license_audit.md  mock_audit.md  solid_principles_review.md
help/: card_inspector.html  contents.hhc  deck_builder.html  deck_notes.html  deck_results.html  deck_workspace.html  index.hhk  index.html  match_history.html  metagame_analysis.html  metagame_research.html  mtgo_tools.hhp  opponent_tracker.html  settings.html  sideboard_guide.html  timer_alert.html
navigators/: mtggoldfish.py  mtggoldfish_visual.py  mtgo_decklists.py
packaging/: README.md  build_installer.sh  installer.iss  magic_online_metagame_crawler.spec
repositories/: __init__.py  card_repository.py  deck_db_store.py  deck_file_store.py  deck_repository.py  deck_side_data_store.py  deck_text_cache.py  deck_workspace_state.py  format_card_pool_repository.py  metagame_repository.py  radar_repository.py
scripts/: benchmark_json_caches.py  convert_to_msgpack.py  dump_collection.py  generate_architecture_diagram.py  generate_card_art_selection_fixture.py  generate_dependency_diagrams.py  generate_loc_report.py  list_mtgo_events.py  monitor_currency.py  mtgosdk_repl.py  test_card_images.py
services/: __init__.py  archetype_resolver.py  bundle_snapshot_client.py  card_service.py  collection_bridge_refresh.py  collection_cache.py  collection_deck_analysis.py  collection_exporter.py  collection_ownership.py  collection_parsing.py  collection_service.py  collection_stats.py  comp_rules_service.py  deck_averager.py  deck_parser.py  deck_service.py  deck_text_builder.py  deck_workflow_service.py  format_card_pool_service.py  image_service.py  metagame_service.py  mtgo_background_service.py  radar_service.py  remote_snapshot_client.py  search_service.py  state_service.py  store_service.py
tests/: README.md  test_archetype_resolver.py  test_atomic_io.py  test_background_worker.py  test_bulk_data_helpers.py  test_bundle_snapshot_client.py  test_cache_warmer.py  test_card_art_selection_fixture.py  test_card_box_panel_logic.py  test_card_data_aliases.py  test_card_data_refresh.py  test_card_image_display_logic.py  test_card_image_download_queue.py  test_card_image_path_resolver.py  test_card_image_store.py  test_card_images_aliases.py  (+59 more)
(+603 files in other folders)
