[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mtg_metagame_tools"
version = "0.2"
description = "MTG Metagame Analysis: Opponent tracking and deck research tools for MTGO"
authors = [{name = "yochi", email = "pedrogush@gmail.com"}]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
]

[project.scripts]
mtgo-opponent-tracker = "widgets.frames.identify_opponent:main"
mtgo-match-history = "widgets.frames.match_history:main"
mtgo-timer-alert = "widgets.frames.timer_alert:main"
mtgo-metagame = "widgets.frames.metagame_analysis:main"

[tool.ruff]
# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "env",
    "env314",
    "venv",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    "requirements-dev.txt",
]

# Line length to match black
line-length = 100

# Python version
target-version = "py311"

[tool.ruff.lint]
# Enable recommended rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

# Ignore specific rules that might be too strict
ignore = [
    "E501",  # Line too long (handled by black)
    "B008",  # Do not perform function call in argument defaults
    "C901",  # Function is too complex
    "B905",  # `zip()` without an explicit `strict=` parameter
]

[tool.ruff.lint.per-file-ignores]
# Ignore import issues in __init__.py files
"__init__.py" = ["F401", "F403"]
# Ignore complexity in test files
"test_*.py" = ["C901"]
"**/tests/**" = ["C901"]
# Widget entry points insert project root into sys.path before other imports
"widgets/frames/identify_opponent.py" = ["E402"]
"widgets/frames/match_history.py" = ["E402"]
"widgets/frames/timer_alert.py" = ["E402"]
"widgets/frames/metagame_analysis.py" = ["E402"]

[tool.black]
line-length = 100
target-version = ["py311"]
exclude = '''
/(
    \.git
  | \.venv
  | env
  | env314
  | venv
  | __pycache__
  | build
  | dist
  | \.eggs
  | .*\.egg-info
)/
'''
extend-exclude = '''
/(
    packaging/installer\.iss
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true for stricter checking
ignore_missing_imports = true
exclude = [
    "env",
    "venv",
    ".venv",
    "build",
    "dist",
]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.bandit]
exclude_dirs = [
    "env",
    "venv",
    ".venv",
    "tests",
    "build",
    "dist",
]
skips = [
    "B101",  # assert_used - OK in tests
    "B601",  # paramiko_calls - Not using paramiko
]

[tool.bandit.assert_used]
skips = ["**/test_*.py", "**/tests/**"]
